# hackathon-desktop-help

./: .gitignore  Cargo.toml  README.md  agent.md  build.rs  docs.toml  product-prompts.toml  spec.md
snap/: snapcraft.yaml
snap/gui/: ask-ubuntu-docs.desktop  ubuntu-desktop-help.desktop
snap/hooks/: install
src/: cli.rs  conversation.rs  gui.rs  llm.rs  main.rs  markdown.rs  prompts.rs  vectordb.rs
ubuntu-desktop-help/: Cargo.toml  cli-system-prompt.md
ubuntu-desktop-help/snap/: snapcraft.yaml
ubuntu-desktop-help/snap/hooks/: post-refresh
ubuntu-desktop-help/snap/local/: launcher.sh
ubuntu-desktop-help/src/: gui.rs  markdown.rs  vectordb.rs
ubuntu-docs-indexer/: .gitignore  Cargo.toml  docs.toml
ubuntu-docs-indexer/src/: main.rs
