[package]
name = "ubuntu-docs-indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ubuntu-docs-indexer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow-array = "58"
arrow-schema = "58"
clap = { version = "4.5", features = ["derive"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
indicatif = "0.17"
lancedb = "0.29"
pulldown-cmark = "0.11"
serde = { version = "1", features = ["derive"] }
text-splitter = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
